import "DocumentId.proto";

package Diadoc.Api.Proto;

option java_outer_classname = "Content_v2Protos";

message Content_v2 {
	optional bytes Content = 1;
	optional string NameOnShelf = 2;
	optional string PatchedContentId = 3;
	optional DocumentIdEx DocumentId = 4;
}